--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,26 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <resume>false</resume>
+                    <useReleaseProfile>false</useReleaseProfile>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+    <scm>
+        <connection>
+            scm:git:git@github.com:mbryzhko/vento-remote.git
+        </connection>
+        <developerConnection>
+            scm:git:git@github.com:mbryzhko/vento-remote.git
+        </developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 
 </project>
