--- a/pom.xml
+++ b/pom.xml
@@ -119,4 +119,12 @@
         <tag>HEAD</tag>
     </scm>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/mbryzhko/vento-remote</url>
+        </repository>
+    </distributionManagement>
+
 </project>
