--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -28,6 +28,10 @@ jobs:
 #      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
 #      env:
 #        GITHUB_TOKEN: ${{ github.token }}
+    - name: Configure Git user
+      run: |
+        git config user.email "actions@github.com"
+        git config user.name "GitHub Actions
     - name: Maven Release
       run: mvn release:prepare release:perform -s $GITHUB_WORKSPACE/settings.xml
       env:
