--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -28,12 +28,13 @@ jobs:
 #      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
 #      env:
 #        GITHUB_TOKEN: ${{ github.token }}
-    - name: Configure Git user
-      run: |
-        git config user.email "actions@github.com"
-        git config user.name "GitHub Actions"
-    - name: Maven Release
-      run: mvn release:prepare release:perform -s $GITHUB_WORKSPACE/settings.xml
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+    - name: Release
+      uses: qcastel/github-actions-maven-release@master
+      with:
+        release-branch-name: "master"
+
+        git-release-bot-name: "release-bot"
+        git-release-bot-email: "release-bot@example.com"
+
+        access-token: ${{ secrets.GITHUB_ACCESS_TOKEN }}
 
