--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -21,20 +21,14 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-#    - name: Build with Maven
-#      run: mvn -B package --file pom.xml
-#
-#    - name: Publish to GitHub Packages Apache Maven
-#      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-#      env:
-#        GITHUB_TOKEN: ${{ github.token }}
-    - name: Release
-      uses: qcastel/github-actions-maven-release@master
-      with:
-        release-branch-name: "master"
+    - name: Prepare Release
+      run: mvn -B release:prepare -s $GITHUB_WORKSPACE/settings.xml
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
 
-        git-release-bot-name: "release-bot"
-        git-release-bot-email: "release-bot@example.com"
+    - name: Performa Release
+      run: mvn release:perform -s $GITHUB_WORKSPACE/settings.xml
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
 
-        access-token: ${{ secrets.GITHUB_ACCESS_TOKEN }}
 
