--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -19,20 +19,21 @@ jobs:
       with:
         java-version: 11
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Configure Git user
       run: |
-        git config user.email "actions@github.com"
-        git config user.name "GitHub Actions"
+        git config --global committer.email "noreply@github.com"
+        git config --global committer.name "GitHub"
+        git config --global author.email "${GITHUB_ACTOR}@users.noreply.github.com"
+        git config --global author.name "${GITHUB_ACTOR}"
 
     - name: Prepare Release
-      run: mvn -B release:prepare -s $GITHUB_WORKSPACE/settings.xml
+      run: mvn -B release:prepare -Dusername=$GITHUB_ACTOR -Dpassword=$GITHUB_TOKEN
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Performa Release
-      run: mvn release:perform -s $GITHUB_WORKSPACE/settings.xml
+      run: mvn release:perform
       env:
         GITHUB_TOKEN: ${{ github.token }}
 
