--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -32,9 +32,9 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Performa Release
-      run: mvn release:perform
+    - name: Perform Release
+      run: mvn -B release:perform
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
