Fix docker registry creds

--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -35,6 +35,7 @@ jobs:
     - name: Perform Release
       run: mvn -B release:perform
       env:
+        GITHUB_ACTOR: ${{ github.actor }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
