--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>1.5-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -146,7 +146,7 @@
                 <artifactId>dockerfile-maven-plugin</artifactId>
                 <version>1.4.13</version>
                 <configuration>
-                    <repository>docker.pkg.github.com/mbryzhko/vento-remote/${project.artifactId}</repository>
+                    <repository>docker.pkg.github.com/mbryzhko/vento-remote/${project.artifactId}-arm32v6</repository>
                     <username>${env.GITHUB_ACTOR}</username>
                     <password>${env.GITHUB_TOKEN}</password>
                     <tag>${project.version}</tag>
