--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,11 @@
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
         <dockerfile-maven-plugin.version>1.4.13</dockerfile-maven-plugin.version>
+        <logback.version>1.2.3</logback.version>
 
+        <docker-img-name.x86>lpicanco/java11-alpine:11.0</docker-img-name.x86>
+
+        <snake-yaml.version>1.27</snake-yaml.version>
     </properties>
 
     <dependencies>
@@ -45,15 +49,15 @@
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
-            <version>1.27</version>
+            <version>${snake-yaml.version}</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
-            <scope>compile</scope>
+            <version>${logback.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- TESTING -->
@@ -146,8 +150,10 @@
                 <artifactId>dockerfile-maven-plugin</artifactId>
                 <version>1.4.13</version>
                 <configuration>
-                    <repository>docker.pkg.github.com/mbryzhko/vento-remote/${project.artifactId}</repository>
+                    <repository>docker.pkg.github.com/mbryzhko/vento-remote/${project.artifactId}-x86</repository>
+                    <!--suppress UnresolvedMavenProperty -->
                     <username>${env.GITHUB_ACTOR}</username>
+                    <!--suppress UnresolvedMavenProperty -->
                     <password>${env.GITHUB_TOKEN}</password>
                     <buildArgs>
                         <JAR_FILE>${project.build.finalName}-jar-with-dependencies.jar</JAR_FILE>
@@ -162,25 +168,38 @@
                             <goal>push</goal>
                         </goals>
                         <configuration>
-                            <tag>${project.version}-x86</tag>
+                            <tag>${project.version}</tag>
                             <buildArgs>
-                                <IMG>lpicanco/java11-alpine</IMG>
+                                <IMG>${docker-img-name.x86}</IMG>
                             </buildArgs>
                         </configuration>
                     </execution>
                     <execution>
-                        <id>arm32v7</id>
+                        <id>x86-tag-latest</id>
                         <goals>
                             <goal>build</goal>
                             <goal>push</goal>
                         </goals>
                         <configuration>
-                            <tag>${project.version}-arm64v8</tag>
+                            <tag>latest</tag>
                             <buildArgs>
-                                <IMG>arm32v7/openjdk:11</IMG>
+                                <IMG>${docker-img-name.x86}</IMG>
                             </buildArgs>
                         </configuration>
                     </execution>
+<!--                    <execution>-->
+<!--                        <id>arm32v7</id>-->
+<!--                        <goals>-->
+<!--                            <goal>build</goal>-->
+<!--                            <goal>push</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            <tag>${project.version}-arm64v8</tag>-->
+<!--                            <buildArgs>-->
+<!--                                <IMG>arm32v7/openjdk:11</IMG>-->
+<!--                            </buildArgs>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
                 </executions>
             </plugin>
         </plugins>
