[maven-release-plugin] prepare release vento-remote-1.14

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.bma</groupId>
     <artifactId>vento-remote</artifactId>
-    <version>1.14-SNAPSHOT</version>
+    <version>1.14</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -212,7 +212,7 @@
         <developerConnection>
             scm:git:https://github.com/mbryzhko/vento-remote.git
         </developerConnection>
-        <tag>vento-remote-1.12</tag>
+        <tag>vento-remote-1.14</tag>
     </scm>
 
     <distributionManagement>
