--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <lombok.version>1.18.4</lombok.version>
-        <spring.framework.version>5.1.4.RELEASE</spring.framework.version>
+        <spring.framework.version>5.3.31</spring.framework.version>
         <junit.version>5.4.2</junit.version>
         <mockito.version>2.24.0</mockito.version>
         <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
@@ -44,9 +44,15 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.framework.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
-            <version>1.27</version>
+            <version>2.2</version>
             <scope>compile</scope>
         </dependency>
 
@@ -60,7 +66,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <version>1.2.9</version>
             <scope>compile</scope>
         </dependency>
 
